:fix: fixed text overflow on menu items

--- a/sass/restaurants_menus.sass
+++ b/sass/restaurants_menus.sass
@@ -103,15 +103,16 @@
     &__title
       display: flex
       flex-direction: column
-      width: calc(80%)
+      width: 80%
       padding: 10px
-      white-space: nowrap
-      overflow: hidden
-      text-overflow: ellipsis
+
     &__subtitle
       width: calc(80%)
       margin-top: 10px
       white-space: nowrap
+      white-space: nowrap
+      overflow: hidden
+      text-overflow: ellipsis
     &__price
       width: 20%
       display: flex
